...
                        widget.enableLikeAndReply && widget.post.uid != _uid
                          ? Container(
                              padding: const EdgeInsets.fromLTRB(6.0, 0.0, 0.0, 10.0),
                              height: 50.0,
                              width: 40.0,
                              child: IconButton(
                                key: const Key('ThreadPostThumbsUp'),
                                icon: Icon(
                                  post.likes.contains(_uid) ? Icons.thumb_up_alt : Icons.thumb_up_alt_outlined,
                                  color: Colors.grey
                                ),
                                iconSize: 20,
                                onPressed: () async {
...
                          )
                        : Container(
                            padding: const EdgeInsets.fromLTRB(8.0, 8.0, 0.0, 10.0),
                            height: 50.0,
                            width: 40.0,
                            child: Icon(
                              key: const Key('OwnThreadPostThumbsUp'),
                              post.likes.contains(_uid) ? Icons.thumb_up_alt : Icons.thumb_up_alt_outlined,
                              color: Colors.grey,
                              size: 20,
                            ),
                          ),
                        Padding(
                          padding: const EdgeInsets.only(top: 8.0, bottom: 10.0),
                          child: Text(
                            key: const Key('ThreadPostLikes'),
                            '${post.likes.length}',
                            style: oswaldTextStyle.copyWith(fontSize: 12.0, color: Colors.grey),
                          ),
                        ),
                        Container(
                          padding: const EdgeInsets.fromLTRB(8.0, 8.0, 0.0, 10.0),
...
                            size: 20.0,
                          ),
                        ),
                        Padding(
                          padding: const EdgeInsets.only(top: 8.0, bottom: 10.0),
                          child: Text(
                            key: const Key('ThreadPostComments'),
                            '${post.comments}',
                            style: oswaldTextStyle.copyWith(fontSize: 12.0, color: Colors.grey),
                          ),
                        ),
                        const Expanded(
                          child: SizedBox(),
                        ),
                        widget.enableLikeAndReply
                          ? SizedBox(
                              width: 50.0,
                              child: TextButton(
                                key: const Key('PostReplyButton'),
                                style: TextButton.styleFrom(
                                  padding: const EdgeInsets.all(0.0),
                                ),
                                child: AutoSizeText(
                                  'Reply',
                                  style: oswaldTextStyle.copyWith(fontSize: 12.0, color: Colors.grey),
                                  maxLines: 1,
                                ),
                                onPressed: widget.function,
                              ),
                            )
...
