...
                                            height: 35.0,
                                            child: Row(
                                              mainAxisAlignment: MainAxisAlignment.start,
                                              children: <Widget> [
                                                widget.enableLikeAndReply && comment.uid != _uid
                                                  ? IconButton(
                                                      key: const Key('ThreadCommentThumbsUp'),
                                                      padding: const EdgeInsets.fromLTRB(10.0, 2.0, 0.0, 0.0),
                                                      constraints: const BoxConstraints(),
                                                      icon: Icon(
                                                        comment.likes.contains(_uid) ? Icons.thumb_up_alt : Icons.thumb_up_alt_outlined,
                                                        color: Colors.grey
                                                      ),
                                                      iconSize: 20,
                                                      onPressed: () async {
                                                        await _commentsDatabase.changeLikeStatus(commentId, _uid);
                                                      },
                                                    )
                                                  : Icon(
                                                      key: const Key('OwnThreadResponseThumbsUp'),
                                                      comment.likes.contains(_uid) ? Icons.thumb_up_alt : Icons.thumb_up_alt_outlined,
                                                      color: Colors.grey,
                                                      size: 20,
                                                    ),
                                                Padding(
                                                  padding: const EdgeInsets.fromLTRB(5.0, 8.0, 12.0, 10.0),
                                                  child: Text(
                                                    key: const Key('ThreadCommentLikes'),
                                                    '${comment.likes.length}',
                                                    style: oswaldTextStyle.copyWith(fontSize: 12.0, color: Colors.grey),
                                                  ),
                                                ),
                                                const Padding(
                                                  padding: EdgeInsets.only(top: 2.0),
...
                                                    size: 20.0,
                                                  ),
                                                ),
                                                Padding(
                                                  padding: const EdgeInsets.fromLTRB(5.0, 8.0, 0.0, 10.0),
                                                  child: Text(
                                                    key: const Key('ThreadResponseComments'),
                                                    '${comment.comments}',
                                                    style: oswaldTextStyle.copyWith(fontSize: 12.0, color: Colors.grey),
                                                  ),
                                                ),
                                                const Expanded(
                                                  child: SizedBox(),
                                                ),
                                                widget.enableLikeAndReply ? SizedBox(
                                                  width: 50.0,
                                                  child: TextButton(
                                                    key: const Key('CommentReplyButton'),
                                                    style: TextButton.styleFrom(
                                                      padding: const EdgeInsets.all(0.0),
                                                    ),
                                                    child: AutoSizeText(
                                                      'Reply',
                                                      style: oswaldTextStyle.copyWith(fontSize: 12.0, color: Colors.grey),
...
