...
                        ),
                      ),
                      Container(
                        width: 40.0,
                        padding: const EdgeInsets.only(top: 5.0),
                        child: IconButton(
                          key: const Key('RightPointingArrow'),
                          icon: const Icon(Icons.arrow_forward_ios, color: Colors.grey),
                          iconSize: 25,
                          onPressed: () {
                            Navigator.push(
                                context,
                                PageTransition(
...
                        widget.post.uid != _uid
                          ? Container(
                            padding: const EdgeInsets.fromLTRB(6.0, 0.0, 0.0, 0.0),
                            height: 50.0,
                            width: 40.0,
                            child: IconButton(
                              key: const Key('ForumPostThumbsUp'),
                              icon: Icon(
                                widget.post.likes.contains(_uid) ? Icons.thumb_up_alt : Icons.thumb_up_alt_outlined,
                                color: Colors.grey
                              ),
                              iconSize: 20,
                              onPressed: () async {
...
                          )
                          : Container(
                              padding: const EdgeInsets.fromLTRB(8.0, 8.0, 0.0, 0.0),
                              height: 50.0,
                              width: 40.0,
                              child: Icon(
                                key: const Key('OwnPostThumbsUp'),
                                Icons.thumb_up_alt_outlined,
                                color: Colors.grey,
                                size: 20
                              ),
                            ),
                        Padding(
                          padding: const EdgeInsets.only(top: 8.0),
                          child: Text(
                            key: const Key('ForumPostLikes'),
                            '${widget.post.likes.length}',
                            style: oswaldTextStyle.copyWith(fontSize: 12.0, color: Colors.grey),
                          ),
                        ),
                        Container(
                          padding: const EdgeInsets.fromLTRB(8.0, 8.0, 0.0, 0.0),
...
