...
                children: <Widget>[
                  closeIcon(context),
                  const Expanded(
                    child: SizedBox(),
                  ),
                  appBarButton(
                    'Post',
                    () async {
                      if (_formKey.currentState!.validate()) {
                        await ForumDatabase().createNewPost(
                          _uid,
                          _title,
                          _text,
...
                color: whiteOpacity10,
                child: Column(
                  children: <Widget> [
                    Container(
                      margin: const EdgeInsets.fromLTRB(12.0, 12.0, 12.0, 4.0),
                      child: TextFormField( // title
                        key: const Key('NewPostTitleFormField'),
                        decoration: forumFormFieldDeco.copyWith(hintText: 'Add Title'),
                        style: oswaldTextStyle.copyWith(fontSize: 23.5, color: Colors.white),
                        validator: (value) => value!.trim().isEmpty ? 'Enter your title' : null,
                        onChanged: (value) {
                          setState(() => _title = value.trim());
                        },
...
                    horizontalDivider,
                    Expanded(
                      child: Container(
                        margin: const EdgeInsets.fromLTRB(12.0, 4.0, 12.0, 8.0),
                        child: SingleChildScrollView(
                          child: TextFormField( // text
                            key: const Key('NewPostTextFormField'),
                            maxLines: null,
                            decoration: forumFormFieldDeco.copyWith(hintText: 'Add Text...'),
                            style: oswaldTextStyle.copyWith(fontSize: 20.0, color: Colors.white),
                            validator: (value) => value!.trim().isEmpty ? 'Enter your text' : null,
                            onChanged: (value) {
                              setState(() => _text = value.trim());
...
